Sorted out CSS for correct line wrapping

--- a/_sass/ghostly/_base.scss
+++ b/_sass/ghostly/_base.scss
@@ -50,7 +50,7 @@ article:first-child {padding-top:0}
 article:last-child {padding-bottom:0;margin-bottom:0}
 
 //To reverse-number ordered lists
-// JML note that flexbox is not supported by IE, see https://net-insider.co.uk/css-flexbox-in-2019/ also https://caniuse.com/#search=flexbox.  That's 2% of global usage
+//JML note that flexbox is not supported by IE, see https://net-insider.co.uk/css-flexbox-in-2019/ also https://caniuse.com/#search=flexbox.  That's 2% of global usage
 ol.reverse {display: flex; flex-direction: column-reverse}
 
 //Posts
@@ -63,7 +63,8 @@ li.post:first-child, li.post h3:first-child {margin-top:0;padding-top:0}
 div.column {float:left; width: 50%;}
 
 //Code highlighting
-pre {padding:0;margin:0;overflow-wrap: normal;word-wrap: break-word;text-justify:left;line-height:1}
+//See https://stackoverflow.com/questions/248011/how-do-i-wrap-text-in-a-pre-tag
+pre {padding:0;margin:0;overflow-wrap: break-word;white-space: pre-wrap;text-justify:left;line-height:1}
 code {font-family: $codefont;font-size:medium;letter-spacing: 0.03em;line-height:1}
 div.highlight {padding:1.5ex 2em 1.5ex 2em;margin-bottom:1ex}
 .highlight {background-color: #E8E8E8} //Overwriting a setting of the github highlighting in _github.scss
